--- a/docsearch_config.json
+++ b/docsearch_config.json
@@ -4,7 +4,11 @@
         "https://docs.chief.app"
     ],
     "selectors": {
-        "lvl0": "article header h1",
+        "lvl0": {
+            "selector": "article header h1",
+            "global": true,
+            "default_value": "Documentation"
+        },
         "lvl1": "article h2",
         "lvl2": "article h3",
         "lvl3": "article h4",
