--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -76,7 +76,7 @@ jobs:
         run: echo "::set-output name=config::$(cat docsearch_config.json | jq -r tostring)"
 
       - name: Index to Algolia
-        uses: docker://algolia/docsearch-scraper
+        uses: signcl/docsearch-scraper-action@v1.0.1
         env:
           APPLICATION_ID: ${{ secrets.ALGOLIA_APP_ID }}
           API_KEY: ${{ secrets.ALGOLIA_API_KEY }}
