--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -68,6 +68,9 @@ jobs:
     runs-on: ubuntu-latest
     needs: [ build, deploy ]
     steps:
+      - name: Checkout
+        uses: actions/checkout@v3.0.2
+
       - name: Give GitHub a little time to deploy
         run: sleep 30s
 
