--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -40,6 +40,8 @@ jobs:
       - name: Install dependencies
         run: yarn install --frozen-lockfile
 
+      - name: Copy .env file
+        run: cp .env.example .env.local
       - name: Build with Next.js
         run: yarn next build
       - name: Static HTML export with Next.js
@@ -62,11 +64,8 @@ jobs:
         uses: actions/deploy-pages@v1.0.7
 
   index:
-    environment:
-      name: github-pages
-      url: ${{ steps.deployment.outputs.page_url }}
     runs-on: ubuntu-latest
-    needs: [ build, deploy ]
+    needs: [ deploy ]
     steps:
       - name: Checkout
         uses: actions/checkout@v3.0.2
